# lab_IT_projects

./: README.md
hl_mai_lab2/: CMakeLists.txt  README.md  docker-compose.yaml  start.sh
hl_mai_lab2/config/: config.cpp  config.h
hl_mai_lab2/database/: database.cpp  database.h  person.cpp
hl_mai_lab2/infrastructure/db_prepare/: commands_test.sql  gen_data100k.sql
hl_mai_lab2/tests/: tests.cpp
hl_mai_lab2/web_server/handlers/: person_handler.h
hl_mai_lab3/: CMakeLists.txt  README.md  docker-compose.yaml  shard_gen_data.cpp  start.sh
hl_mai_lab3/database/: cache.cpp  cache.h  database.cpp  database.h  person.cpp  person.h
hl_mai_lab3/infrastructure/db_prepare/: clean.sql  init.sql
hl_mai_lab3/infrastructure/docker/proxysql/: proxysql-test.cnf  proxysql.cnf
hl_mai_lab3/tests/: tests.cpp
hl_mai_lab3/web_server/: http_web_server.h
hl_mai_lab3/web_server/handlers/: person_handler.h
hl_mai_lab4/: CMakeLists.txt  README.md  docker-compose-test.yaml  docker-compose.yaml  start.sh  start_writer.sh  writer_main.cpp
hl_mai_lab4/config/: config.cpp  config.h
hl_mai_lab4/database/: cache.cpp  database.cpp  person.cpp  person.h
hl_mai_lab4/infrastructure/db_prepare/: clean.sql  init.sql  sharded_gen_data100k.sql
hl_mai_lab4/infrastructure/docker/mysql/: Dockerfile
hl_mai_lab4/infrastructure/docker/proxysql/: Dockerfile  Dockerfile-test
hl_mai_lab4/tests/: post_wrk_req.lua  tests.cpp
hl_mai_lab4/web_server/: http_request_factory.h  http_web_server.h
hl_mai_lab4/web_server/handlers/: person_handler.h
hl_mai_lab_01/: CMakeLists.txt  README.md  commands.sql  start.sh  tests.cpp
hl_mai_lab_01/config/: config.cpp
hl_mai_lab_01/database/: person.cpp  person.h
hl_mai_lab_01/web_server/: http_web_server.h
hl_mai_lab_01/web_server/handlers/: person_handler.h
